@@ -1,5 +1,6 @@
-FROM openjdk:8
+FROM openjdk:17.0.1-jdk-slim
 
+RUN useradd -ms /bin/bash appuser
 RUN apt-get update \
     && apt-get install -y \
         curl \
@@ -13,7 +14,9 @@ RUN apt-get update \
 
 
 COPY cb-comment-service-0.0.1-SNAPSHOT.jar /opt/
-RUN echo Hello Dev World !!!
-#HEALTHCHECK --interval=30s --timeout=30s CMD curl --fail http://localhost:7001/actuator/health || exit 1
-CMD ["/bin/bash", "-c", "java -XX:+PrintFlagsFinal $JAVA_OPTIONS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -jar /opt/cb-comment-service-0.0.1-SNAPSHOT.jar"]
+RUN chown -R appuser:appuser /opt
+USER appuser
+WORKDIR /opt
 
+#HEALTHCHECK --interval=30s --timeout=30s CMD curl --fail http://localhost:7001/actuator/health || exit 1
+CMD ["/bin/bash", "-c", "java -XX:+PrintFlagsFinal $JAVA_OPTIONS -XX:+UnlockExperimentalVMOptions -jar /opt/cb-comment-service-0.0.1-SNAPSHOT.jar"]
